# N-Body-MPI-simulation

./: Body.cpp  Body.h  CMakeLists.txt  DrawBodies.m  Node.cpp  Node.h  README.md  Time.cpp  Time.h  main.cpp
ScriptCluster/: NBody1Proc.sh  SNBodyJob1.sh  SNBodyJob16.sh  SNBodyJob2.sh  SNBodyJob32.sh  SNBodyJob4.sh  SNBodyJob64.sh  SNBodyJob8.sh  WNBodyJob1.sh  WNBodyJob16.sh  WNBodyJob2.sh  WNBodyJob32.sh  WNBodyJob4.sh  WNBodyJob64.sh  WNBodyJob8.sh
